--- a/Clase 3/estilo.css
+++ b/Clase 3/estilo.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 *{
     margin: 0;
@@ -8,19 +8,19 @@
 
 body{
     background-color: #faeeee;
-    font-family: "Tektur", sans-serif; ;
+    font-family:"Roboto Condensed", sans-serif;
     margin: 5%;
-    line-height: 1.6;
+    line-height: 1.6; 
 }
 main{
     max-width: 800px;
     margin: auto;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(28,123,54,9.1);
+    box-shadow: 0 0 10px rgba(28,123,54,0.1);
 }
 header{
     text-align: center;
-    color: rgba(88,195,225);
+    color: rgb(88,195,227);
     padding: 20px 0;
     border-radius: 8px 8px 0 0;
     background-image: url('./img/paraiso.jpg');
@@ -30,9 +30,9 @@ header{
 }
 
 header figure img{
-    border-radius: 50%;
-    border: 5px solid #216cae;
-    box-shadow: 0px 0px 10px;
+   border-radius: 50%;
+   border: 5px solid #216cae;
+   /* object-fit: cover; Nota : para cubrir el tamaño compelto*/ 
 }
 
 header h1{
@@ -42,7 +42,7 @@ header h1{
 
 header h2{
     font-size: 1.2em;
-    opacity: 0.8;
+    opacity: 0.7;
 }
 
 .container{
@@ -60,13 +60,70 @@ header h2{
     overflow: hidden;
     display: inline-block;
     vertical-align: middle;
-    border: 8px solid #0ebaba;
+    border: 7px solid #0ebaba;
     margin: 5%;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+    
 }
 
 .contenedor_foto_perfil img{
     width: 100%;
     height: auto;
     display: block;
+   
+}
+
+img{
+    object-fit: cover;
+}
+
+.cabecera{
+    position:relative;
+}
+
+.nombre_puesto{
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 1%;
+    text-shadow: 0px 0px 20px rgba(0,0,0,0.5);
+}
+
+h3{
+    font-size: 1.4em;
+    margin-top: 20px;
+    color: rgba(14,16,16,0.1);
+}
+section{
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+}
+section hr{
+    border:0;
+    height: 2px;
+    background: #0ebaba;
+    margin: 10px 0;
+}
+
+ul{
+    list-style: none;
+}
+
+ul li{
+    padding: 5px 0;
+}
+
+i{
+    color: #216cae;
+    margin-right: 8px;
+}
+
+address p{
+    margin: 5px 0;
+}
+
+article{
+    margin-bottom: 15px;
 }
